feat: Se implemento wallet, transacciones y eventos en tiempo real :white_check_mark: :construction_worker:
